# Charprint

./: README.md  main.py  pyproject.toml
Charprint/: pyproject.toml
Charprint/charprint/: __init__.py
Charprint/tests/: test_charprint.py
charprint/: LICENSE  README.md  setup.py
charprint.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
charprint/charprint/: __init__.py
charprint_AverseABFun.egg-info/: PKG-INFO  SOURCES.txt
charprinto/: README.md  pyproject.toml
charprinto.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
charprinto/charprinto/: __init__.py
charprinto/tests/: test_charprinto.py
