[tool.poetry]
name = "charprinto"
version = "1.9.10"
description = ""
authors = ["AverseABFun <averse.abfun@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
cursor = "^1.3.4"
termcolor = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
